stopgap

--- a/src/styles/standard/general.scss
+++ b/src/styles/standard/general.scss
@@ -39,26 +39,14 @@ a.link {
 
 .boxesBkLeft {
   min-height: 400px;
-  background-size: 400px !important;
+  background-size: cover;
   background-position: left top 75px;
   background-repeat: repeat-y !important;
   padding-bottom: 2em;
-  :before {
-    background-size: 400px !important;
-  }
-  :after {
-    background-size: 400px !important;
-  }
 }
 .boxesBkRight {
   min-height: 400px;
-  background-size: 400px !important;
+  background-size: cover;
   background-position: right top 125px;
   background-repeat: repeat-y !important;
-  :before {
-    background-size: 400px !important;
-  }
-  :after {
-    background-size: 400px !important;
-  }
 }
